# codex-bridge-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  codex_bridge_mcp.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
codex_bridge_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
commands/: codex.md  context.md  delegate.md  discuss.md  research.md
docs/: commands.md  index.md  sessions.md  troubleshooting.md  verification.md
examples/: README.md
hooks/: README.md
skills/codex-bridge/: EXAMPLES.md  SKILL.md
skills/coding-delegation/: EXAMPLES.md  SKILL.md
skills/critical-discussion/: EXAMPLES.md  SKILL.md
skills/research/: EXAMPLES.md  SKILL.md
skills/using-codex/: EXAMPLES.md  SKILL.md
tests/: __init__.py  conftest.py  test_bridge_server.py  test_codex_mcp_client.py  test_helpers.py  test_session_info.py  test_session_store.py  test_utils.py
